--- a/index.html
+++ b/index.html
@@ -50,5 +50,41 @@
       </div>
     </header>
     <!-- Header end -->
+
+    <!-- main start -->
+    <main>
+      <section>
+        <div class="container">
+          <div class="features">
+            <div class="box">
+              <div class="gallery">
+                <img src="./images/team1.png" alt="team1" />
+                <img src="./images/team2.png" alt="team2" />
+                <img src="./images/team3.png" alt="team3" />
+                <img src="./images/team4.png" alt="team4" />
+              </div>
+            </div>
+            <div class="box">
+              <div class="bio">
+                <h3 class="title">
+                  <span class="left">Quick list</span> of Our<span></span>
+                  <span class="right">Features</span>
+                </h3>
+                <p class="description">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised words which don't look
+                  even
+                </p>
+                <div class="btn-left">
+                  <a href="#" class="btn-orange">Explore More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- main end -->
   </body>
 </html>
