--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
     <!-- main start -->
     <main>
+      <!-- Features start -->
       <section>
         <div class="container">
           <div class="features">
@@ -84,7 +85,192 @@
           </div>
         </div>
       </section>
+      <!-- Features start -->
+
+      <!-- Enjoy start -->
+      <section>
+        <div class="container">
+          <div class="enjoy">
+            <div class="box">
+              <div class="features-enjoy">
+                <h3 class="title">Features you will love & enjoy</h3>
+                <p class="description">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised words which don't look
+                  even
+                </p>
+                <div class="item-container">
+                  <div class="item">
+                    <h4 class="title">Dexktop & Mobile Version</h4>
+                    <p class="description">
+                      There are many variations of passages of Lorem Ipsum
+                      available, but the majority have suffered alteration in
+                      some form, by injected humour, or randomised...........
+                    </p>
+                  </div>
+                  <div class="item">
+                    <h4 class="title">Drag & Drop Builder</h4>
+                    <p class="description">
+                      There are many variations of passages of Lorem Ipsum
+                      available, but the majority have suffered alteration in
+                      some form, by injected humour, or randomised...........
+                    </p>
+                  </div>
+                  <div class="item">
+                    <h4 class="title">Awesome Modern Design</h4>
+                    <p class="description">
+                      There are many variations of passages of Lorem Ipsum
+                      available, but the majority have suffered alteration in
+                      some form, by injected humour, or randomised...........
+                    </p>
+                  </div>
+                  <div class="item">
+                    <h4 class="title">Super Easy to Edit</h4>
+                    <p class="description">
+                      There are many variations of passages of Lorem Ipsum
+                      available, but the majority have suffered alteration in
+                      some form, by injected humour, or randomised...........
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box">
+              <div class="imag-container">
+                <img src="./images/architect.png" alt="architect" />
+              </div>
+            </div>
+            <div class="experience">
+              <h5 class="years">10+Year</h5>
+              <p class="title">Experience</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Enjoy end -->
+
+      <!-- Facts start -->
+      <section>
+        <div class="container">
+          <div class="facts">
+            <h3 class="title">Some Facts</h3>
+            <p class="description">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration.
+            </p>
+            <div class="items">
+              <div class="item">
+                <img src="./images/icons/ribon.png" alt="ribon" />
+                <h5 class="numbers">54</h5>
+                <h6 class="title">Awards Winnings</h6>
+              </div>
+              <div class="item">
+                <img src="./images/icons/projects.png" alt="projects" />
+                <h5 class="numbers">1458</h5>
+                <h6 class="title">Project Finished</h6>
+              </div>
+              <div class="item">
+                <img src="./images/icons/customers.png" alt="customers" />
+                <h5 class="numbers">590</h5>
+                <h6 class="title">Clients Worked</h6>
+              </div>
+              <div class="item">
+                <img src="./images/icons/email.png" alt="email" />
+                <h5 class="numbers">22578</h5>
+                <h6 class="title">Email Send</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Facts end -->
+
+      <!-- Sponsers start-->
+      <section>
+        <div class="container">
+          <div class="sponsers">
+            <div class="info">
+              <h3 class="title">Our Sponspors</h3>
+              <p class="description">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration.
+              </p>
+            </div>
+            <div class="items">
+              <div class="item">
+                <img src="./images/sponsors/spotify.png" alt="spotify" />
+              </div>
+              <div class="item">
+                <img src="./images/sponsors/amazon.png" alt="amazon" />
+              </div>
+              <div class="item">
+                <img src="./images/sponsors/google.png" alt="google" />
+              </div>
+              <div class="item">
+                <img src="./images/sponsors/telerama.png" alt="telerama" />
+              </div>
+              <div class="item">
+                <img src="./images/sponsors/figma.png" alt="figma" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Sponsers end-->
+
+      <!-- Contact start -->
+      <section>
+        <div class="container">
+          <div class="contact">
+            <div class="info">
+              <h3 class="title">Contact Us</h3>
+              <p class="description">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration.
+              </p>
+            </div>
+          </div>
+          <div class="form-info-container">
+            <div class="box">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3607.4283085755465!2d89.35004421536429!3d25.289810034142036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fcdf0dd119040f%3A0x383434f9922ce1b8!2sMd%20Nishath%20Khandakar!5e0!3m2!1sen!2sbd!4v1673724975748!5m2!1sen!2sbd"
+                width="100%"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+            <div class="box">
+              <form>
+                <input type="text" placeholder="Your name" />
+                <input type="email" placeholder="Your email" />
+                <input type="text" placeholder="Subject" />
+                <textarea rows="6"> Your message</textarea>
+                <div class="btn-right">
+                  <input class="submit" type="submit" value="Submit" />
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Contact End -->
     </main>
+
+    <!-- Footer Start -->
+    <footer>
+      <div class="container">
+        <div class="footer">
+          <p class="info">
+            All rights reserved copyright@2023 startup landing page design
+          </p>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer End -->
     <!-- main end -->
   </body>
 </html>
