--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </div>
           </div>
           <div class="form-info-container">
-            <div class="box">
+            <div class="box" id="box-1">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3607.4283085755465!2d89.35004421536429!3d25.289810034142036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fcdf0dd119040f%3A0x383434f9922ce1b8!2sMd%20Nishath%20Khandakar!5e0!3m2!1sen!2sbd!4v1673724975748!5m2!1sen!2sbd"
                 width="100%"
@@ -243,7 +243,7 @@
                 referrerpolicy="no-referrer-when-downgrade"
               ></iframe>
             </div>
-            <div class="box">
+            <div class="box" id="box-2">
               <form>
                 <input type="text" placeholder="Your name" />
                 <input type="email" placeholder="Your email" />
