--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <p class="description">
                       There are many variations of passages of Lorem Ipsum
                       available, but the majority have suffered alteration in
-                      some form, by injected humour, or randomised...........
+                      some form, by injected humour, or randomised
                     </p>
                   </div>
                   <div class="item">
@@ -114,7 +114,7 @@
                     <p class="description">
                       There are many variations of passages of Lorem Ipsum
                       available, but the majority have suffered alteration in
-                      some form, by injected humour, or randomised...........
+                      some form, by injected humour, or randomised
                     </p>
                   </div>
                   <div class="item">
@@ -122,7 +122,7 @@
                     <p class="description">
                       There are many variations of passages of Lorem Ipsum
                       available, but the majority have suffered alteration in
-                      some form, by injected humour, or randomised...........
+                      some form, by injected humour, or randomised
                     </p>
                   </div>
                   <div class="item">
@@ -130,7 +130,7 @@
                     <p class="description">
                       There are many variations of passages of Lorem Ipsum
                       available, but the majority have suffered alteration in
-                      some form, by injected humour, or randomised...........
+                      some form, by injected humour, or randomised.
                     </p>
                   </div>
                 </div>
